--- a/Projet_Examen/Projet_Examen.vcxproj
+++ b/Projet_Examen/Projet_Examen.vcxproj
@@ -139,7 +139,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Boxeur.cpp" />
     <ClCompile Include="Projet_Examen.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Boxeur.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
