Creation et paramettrage de la classe combats + niveau de combat par defaut

--- a/Projet_Examen/Projet_Examen.vcxproj
+++ b/Projet_Examen/Projet_Examen.vcxproj
@@ -140,10 +140,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Boxeur.cpp" />
+    <ClCompile Include="Combat.cpp" />
     <ClCompile Include="Projet_Examen.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Boxeur.h" />
+    <ClInclude Include="Combat.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
